# Verns-Civ5-VP-Toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/: launch.json
.github/agents/: vp-congress-summarizer.agent.md
analysis/: 14_interactive_dashboard.py  15_iy_production_by_era.py  AGENTS.md  Report.R.ipynb  _add_plt_close.py  _check_errors.py  _fix_shap_orphans.py  _quickfix.py  _wrap_notebook.py  civ_bg_colors.csv  wonder_eras.csv
analysis/building_yield_explorer/: build_yield_explorer_debug.bat  pyproject.toml
analysis/building_yield_explorer/src/building_yield_explorer/: __init__.py  __main__.py  config.py  render.py
analysis/building_yield_explorer/src/building_yield_explorer/aggregate/: __init__.py
analysis/building_yield_explorer/src/building_yield_explorer/assets/: app.js  styles.css  template.html
analysis/legacy_examples/: QueryCiv5GameDB.ipynb  civ_colors.csv  civ_flavors.csv
analysis/plotly_explorer/: plotly_explorer_debug.bat  plotly_explorer_deploy_ghpages.bat  plotly_explorer_dev.bat  pyproject.toml
analysis/plotly_explorer/src/plotly_explorer/: __init__.py  __main__.py  config.py  db.py  metadata.py  render.py
analysis/plotly_explorer/src/plotly_explorer/aggregate/: __init__.py  cache.py  game_summaries.py  pipeline.py  policies_performance.py  religion.py  religion_performance.py  units.py
analysis/plotly_explorer/src/plotly_explorer/assets/: app.js  civs.js  policies_performance.js  religion.js  religion_performance.js  styles.css  template.html  units.js
analysis/r_scripts/: 01_victory_mix.R  01_victory_mix_compat.R  02_winrate_by_civ.R  02_winrate_by_civ_compat.R  03_pseudo_dom_victory_mix.R  03_pseudo_dom_victory_mix_compat.R  03_religion_attainment.R  04_pantheon.R  04_pseudo_dom_winrate_by_civ.R  04_pseudo_dom_winrate_by_civ_compat.R  05_founder.R  05_religion_attainment.R  06_enhancer.R  06_pantheon.R  07_founder.R  07_reformation.R  08_enhancer.R  08_tech_era_ridgeline.R  09_era_progression.R  09_reformation.R  10_religion_sankey.R  10_wonder_ridgeline.R  11_tech_era_ridgeline.R  11_wonders_per_civ_lollipop.R  11_wonders_raw_data.R  12_era_progression.R  12_policy_branch_table.R  13_policy_flow_sankey.R  13_wonder_ridgeline.R  14_pseudo_dom_victory_mix.R  14_wonders_per_civ_lollipop.R  14b_wonders_stacked_bar.R  15_policy_branch_table.R  15_pseudo_dom_winrate_by_civ.R  16_policy_branch_winrate_bars.R  (+24 more)
autoplay/: README.md  __init__.py  autoplay_design.md
congress/: README.md
db_util/: db_export.py  run_db_export.bat
logs_processing/: analyze_all.bat  analyze_all_games.sh  analyze_sample.bat  analyze_sample.sh  extract_all.bat  extract_sample.bat  pom.xml  summarize_chat_log.py
promotion_tree/: promotion_tree.py
tests/: conftest.py
(+97 files in other folders)
