[project]
name = "autoplay"
version = "0.1.0"
description = "Civ 5 Vox Populi autoplay hypervisor and runner"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "psutil>=6.1",
    "python-multipart>=0.0.17",
    "duckdb>=1.1",
]

[project.scripts]
autoplay-hypervisor = "autoplay.hypervisor.__main__:main"
autoplay-runner = "autoplay.runner.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pyfakefs>=5.7",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autoplay"]

[tool.hatch.build.targets.wheel.force-include]
"autoplay/hypervisor/webapp" = "autoplay/hypervisor/webapp"

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
