[project]
name = "building-yield-explorer"
version = "0.1.0"
description = "Static interactive dashboard for Civ 5 VP building yields"
readme = "design.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "duckdb>=1.1",
]

[project.scripts]
building-yield-explorer = "building_yield_explorer.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/building_yield_explorer"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
