[project]
name = "plotly-explorer"
version = "0.1.0"
description = "Static interactive Plotly dashboards for Civ 5 VP yields (buildings, religion)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "plotly>=5.24",
    "duckdb>=1.1",
]

[project.scripts]
plotly-explorer = "plotly_explorer.__main__:main"

[dependency-groups]
dev = [
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotly_explorer"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
